# softmatcha

./: .gitignore  CITATION.cff  README.md  pyproject.toml
.github/workflows/: ci.yaml
src/softmatcha/: configs.py  configs_test.py  conftest.py  functional.py  functional_test.py  stopwatch.py  stopwatch_test.py
src/softmatcha/cli/: __init__.py  build_inverted_index.py  grep.py  search_inverted_index.py
src/softmatcha/embeddings/: __init__.py  base.py  fasttext.py  gensim.py  gensim_test.py  transformers.py  transformers_test.py
src/softmatcha/search/: __init__.py  base.py  index_inverted.py  index_inverted_test.py  naive.py  naive_test.py  quick.py  quick_test.py
src/softmatcha/struct/: __init__.py  index.py  index_inverted.py  index_inverted_test.py  pattern.py  sparse_matrix.py  sparse_matrix_test.py  token_embeddings.py
src/softmatcha/tokenizers/: __init__.py  base.py  fasttext.py  gensim.py  icu.py  icu_test.py  mecab.py  mecab_test.py  moses.py  moses_test.py  transformers.py  transformers_test.py
src/softmatcha/utils/: fasttext.py  gensim.py  io.py
